Should fix a scroll issue on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -400,7 +400,7 @@ main{
     padding:32px;
     box-sizing: border-box;
     width: 100%;
-    height:100vh;
+    height:100%;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
